# thsr-ticket-py

./: README.md  pyproject.toml  requirements.txt
thsr_ticket/: main.py
thsr_ticket/configs/: common.py
thsr_ticket/controller/: booking_flow.py  confirm_ticket_flow.py  confirm_train_flow.py  first_page_flow.py
thsr_ticket/ml/: captcha_solver.py  generate_captcha.py
thsr_ticket/ml/train/: README.md  collect_captchas.py  config.py  dataset.py  export_onnx.py  incremental.py  label_captchas.py  model.py  train.py  verify_onnx.py
thsr_ticket/model/: db.py
thsr_ticket/remote/: http_request.py
thsr_ticket/view/: common.py  console.py
thsr_ticket/view/web/: show_booking_result.py  show_error_msg.py
thsr_ticket/view_model/: error_feedback.py
